--- a/application.conf
+++ b/application.conf
@@ -9,38 +9,59 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-play.crypto.secret=${APPLICATION_SECRET}
+play.http.secret.key=${APPLICATION_SECRET}
+play.http.session.maxAge="1h"
 
 # The application languages
 # ~~~~~
 play.i18n.langs=["en"]
 
 play.http.requestHandler = "play.http.DefaultHttpRequestHandler"
-play.http.context = ${HTTP_CONTEXT}
+play.http.context=${HTTP_CONTEXT}
 play.application.loader=loader.KafkaManagerLoader
 
 kafka-manager.zkhosts=${ZK_HOSTS}
 kafka-manager.base-zk-path=${BASE_ZK_PATH}
 pinned-dispatcher.type="PinnedDispatcher"
 pinned-dispatcher.executor="thread-pool-executor"
-application.home="/app"
 application.features=["KMClusterManagerFeature","KMTopicManagerFeature","KMPreferredReplicaElectionFeature","KMReassignPartitionsFeature"]
 
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
-  loglevel = ${KAFKA_MANAGER_LOGLEVEL}
+  loglevel = "INFO"
 }
 
-akka.logger-startup-timeout = ${LOGGER_STARTUP_TIMEOUT}
+akka.logger-startup-timeout = 60s
 
 basicAuthentication.enabled=false
 basicAuthentication.enabled=${?KAFKA_MANAGER_AUTH_ENABLED}
+
+basicAuthentication.ldap.enabled=false
+basicAuthentication.ldap.enabled=${?KAFKA_MANAGER_LDAP_ENABLED}
+basicAuthentication.ldap.server=""
+basicAuthentication.ldap.server=${?KAFKA_MANAGER_LDAP_SERVER}
+basicAuthentication.ldap.port=389
+basicAuthentication.ldap.port=${?KAFKA_MANAGER_LDAP_PORT}
+basicAuthentication.ldap.username=""
+basicAuthentication.ldap.username=${?KAFKA_MANAGER_LDAP_USERNAME}
+basicAuthentication.ldap.password=""
+basicAuthentication.ldap.password=${?KAFKA_MANAGER_LDAP_PASSWORD}
+basicAuthentication.ldap.search-base-dn=""
+basicAuthentication.ldap.search-base-dn=${?KAFKA_MANAGER_LDAP_SEARCH_BASE_DN}
+basicAuthentication.ldap.search-filter="(uid=$capturedLogin$)"
+basicAuthentication.ldap.search-filter=${?KAFKA_MANAGER_LDAP_SEARCH_FILTER}
+basicAuthentication.ldap.connection-pool-size=10
+basicAuthentication.ldap.connection-pool-size=${?KAFKA_MANAGER_LDAP_CONNECTION_POOL_SIZE}
+basicAuthentication.ldap.ssl=false
+basicAuthentication.ldap.ssl=${?KAFKA_MANAGER_LDAP_SSL}
+
 basicAuthentication.username="admin"
 basicAuthentication.username=${?KAFKA_MANAGER_USERNAME}
 basicAuthentication.password="password"
 basicAuthentication.password=${?KAFKA_MANAGER_PASSWORD}
+
 basicAuthentication.realm="Kafka-Manager"
 basicAuthentication.excluded=["/api/health"] # ping the health of your instance without authentification
+basicAuthentication.excluded=[${?KAFKA_MANAGER_AUTH_EXCLUDED_PATHS}]
 
 kafka-manager.consumer.properties.file=${?CONSUMER_PROPERTIES_FILE}
